--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,4 +33,10 @@ workflows:
           filters:
             branches:
               only: master
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
 
